Fix: Min-width on input elements was too wide

--- a/css/searchPanes.dataTables.scss
+++ b/css/searchPanes.dataTables.scss
@@ -86,7 +86,7 @@ div.dtsp-panesContainer {
 						flex-basis: 90px;
 						min-height: 20px;
 						max-width: none;
-						min-width: 90px;
+						min-width: 50px;
 						border: none;
 						padding-left: 12px; 
 						&::placeholder {
